// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should accept the style prop 1`] = `
.emotion-0 {
  padding: 0.25rem;
  font-weight: bold;
  background: #f2f2f7;
  color: green;
}

<span
  class="emotion-0"
>
  Normal
</span>
`;

exports[`should render correctly 1`] = `
.emotion-0 {
  padding: 0.25rem;
  font-weight: bold;
  background: #f2f2f7;
}

<span
  class="emotion-0"
>
  Normal
</span>
`;

exports[`should render correctly 2`] = `
.emotion-0 {
  padding: 0.25rem;
  font-weight: bold;
  background: #d43900;
  color: #FFFFFF;
}

<span
  class="emotion-0"
>
  Alert
</span>
`;

exports[`should render correctly 3`] = `
.emotion-0 {
  padding: 0.25rem;
  font-weight: bold;
  background: #E0001A;
  color: #FFFFFF;
}

<span
  class="emotion-0"
>
  Danger
</span>
`;

exports[`should render correctly 4`] = `
.emotion-0 {
  padding: 0.25rem;
  font-weight: bold;
  background: #0066f5;
  color: #FFFFFF;
}

<span
  class="emotion-0"
>
  Info
</span>
`;

exports[`should render correctly 5`] = `
.emotion-0 {
  padding: 0.25rem;
  font-weight: bold;
  background: #00821a;
  color: #FFFFFF;
}

<span
  class="emotion-0"
>
  Success
</span>
`;
